--- a/app/views/header.phtml
+++ b/app/views/header.phtml
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="author" content="Gabriel Caruso">
+        <meta name="description" content="<?php echo $view_description ?>">
         <meta name="generator" content="HXPHP Framework">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <base href="http://<?php echo $_SERVER['HTTP_HOST'].BASE?>">
